ns.yaml
# ---------------------------------------------------------------
# demo 命名空间
# ---------------------------------------------------------------

apiVersion: v1
kind: Namespace
metadata:
  name: demo-ns
