ngx-pod-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ngx-pod-probe

spec:
  volumes:
    - name: ngx-conf-vol
      configMap:
        name: ngx-conf

  containers:
    - image: nginx:alpine
      name: ngx
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: ngx-conf-vol

      startupProbe: # 每1s使用cat命令检查磁盘上的进程号文件
        periodSeconds: 1
        exec:
          command: ["cat", "nginx.pid"]

      livenessProbe: # 每10s使用TCP Socket尝试连接nginx的80端口
        periodSeconds: 10
        tcpSocket:
          port: 80

      readinessProbe: # 每5s使用Http GET访问/ready 路径
        periodSeconds: 5
        httpGet:
          path: /ready
          port: 8080
