ngx-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngx-dep

spec:
  replicas: 4
  selector:
    matchLabels:
      app: ngx-dep

  template:
    metadata:
      labels:
        app: ngx-dep
    spec:
      volumes:
        - name: ngx-conf-vol
          configMap:
            name: ngx-conf
        - name: host-pvc-vol
          persistentVolumeClaim:
            claimName: host-20m-pvc # 与你创建的 PVC 的名称匹配
      containers:
        - image: nginx:1.21-alpine
          name: nginx
          ports:
            - containerPort: 80

          volumeMounts:
            - name: ngx-conf-vol
              mountPath: /etc/nginx/conf.d
            - name: host-pvc-vol
              mountPath: /tmp
