nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngx-svc

spec:
  selector:
    app: ngx-dep

  ports:
    - port: 8081
      targetPort: 80
      protocol: TCP

  type: NodePort
