redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-pv-svc

spec:
  selector:
    app: redis-pv-sts

  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP

  type: ClusterIP
  clusterIP: None
